--- a/.github/workflows/pipeline-escola.yml
+++ b/.github/workflows/pipeline-escola.yml
@@ -48,3 +48,21 @@ jobs:
 
       - name: Teste dentro do Docker
         run: docker run --rm api-escola python -m unittest test_app -v
+
+  deploy:
+    name: Deploy to Vercel
+    runs-on: ubuntu-latest
+    needs: test
+    # Secrets required: VERCEL_TOKEN (token with deploy permissions)
+    # Optional: VERCEL_ORG_ID and VERCEL_PROJECT_ID if you want to target a specific project/org
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy to Vercel (simple)
+        uses: amondnet/vercel-action@v20
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} 
+          vercel-args: '--prod --confirm'
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
